external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_mut_4.move
module 0x42::a {

    public enum Maybe<T> {
        Just(T),
        Nothing,
    }

    fun main(m: &Maybe<u64>) {
        match (m) {
            mut Maybe::Nothing => (),
            Maybe::Just(_) => (),
        }
    }

}
